##############################################################

import("//react-native/common.gni")

config("ReanimatedModule_config") {
  include_dirs = [
    ".",
  ]
  #Common header files
  include_dirs += [
    "..",
    "../Common/cpp/headers/NativeModules/",
    "../Common/cpp/headers/Registries/",
    "../Common/cpp/headers/SpecTools/",
    "../Common/cpp/headers/SpecTools/",
    "../Common/cpp/headers/SharedItems/",
    "../Common/cpp/headers/Tools/",
  ]

  cflags_cc = [ "-Wno-ignored-qualifiers"]
  #Common cpp flags required
  cflags_cc += [ "-std=c++17"]
  cflags_cc += [
    "-Wno-header-hygiene",
    "-Wno-sign-compare",
    "-Wno-unreachable-code",
    "-Wno-implicit-fallthrough",
  ]
}

rn_cxx_component("RSReanimatedModule") {
  sources = [
    "native/REAErrorHandler.cpp",
    "native/REAErrorHandler.h",
    "native/REALogger.cpp",
    "native/REALogger.h",
    "native/REAScheduler.cpp",
    "native/REAScheduler.h",
    "native/RSProxy.cpp",
    "native/RSProxy.h",
    "Nodes/REAAlwaysNode.cpp",
    "Nodes/REAAlwaysNode.h",
    "Nodes/REABezierNode.cpp",
    "Nodes/REABezierNode.h",
    "Nodes/REABlockNode.cpp",
    "Nodes/REABlockNode.h",
    "Nodes/REACallFuncNode.cpp",
    "Nodes/REACallFuncNode.h",
    "Nodes/REACallNode.cpp",
    "Nodes/REACallNode.h",
    "Nodes/REAClockNode.cpp",
    "Nodes/REAClockNode.h",
    "Nodes/REAConcatNode.cpp",
    "Nodes/REAConcatNode.h",
    "Nodes/REACondNode.cpp",
    "Nodes/REACondNode.h",
    "Nodes/READebugNode.cpp",
    "Nodes/READebugNode.h",
    "Nodes/REAEventNode.cpp",
    "Nodes/REAEventNode.h",
    "Nodes/REAFuncNode.cpp",
    "Nodes/REAFuncNode.h",
    "Nodes/REANode.cpp",
    "Nodes/REANode.h",
    "Nodes/REAOpNode.cpp",
    "Nodes/REAOpNode.h",
    "Nodes/REAParamNode.cpp",
    "Nodes/REAParamNode.h",
    "Nodes/REAPropsNode.cpp",
    "Nodes/REAPropsNode.h",
    "Nodes/REASetNode.cpp",
    "Nodes/REASetNode.h",
    "Nodes/REAStyleNode.cpp",
    "Nodes/REAStyleNode.h",
    "Nodes/REATransformNode.cpp",
    "Nodes/REATransformNode.h",
    "Nodes/REAValueNode.cpp",
    "Nodes/REAValueNode.h",
    "RSNodeManager.cpp",
    "RSNodeManager.h",
    "RSReanimatedModule.cpp",
    "RSReanimatedModule.h",
  ]
  # Common cpp files
  sources += [
    "../Common/cpp/NativeModules/NativeReanimatedModule.cpp",
    "../Common/cpp/NativeModules/NativeReanimatedModuleSpec.cpp",
    "../Common/cpp/Registries/EventHandlerRegistry.cpp",
    "../Common/cpp/Registries/MapperRegistry.cpp",
    "../Common/cpp/Registries/WorkletsCache.cpp",
    "../Common/cpp/SharedItems/FrozenObject.cpp",
    "../Common/cpp/SharedItems/MutableValue.cpp",
    "../Common/cpp/SharedItems/MutableValueSetterProxy.cpp",
    "../Common/cpp/SharedItems/RemoteObject.cpp",
    "../Common/cpp/SharedItems/ShareableValue.cpp",
    "../Common/cpp/Tools/JSIStoreValueUser.cpp",
    "../Common/cpp/Tools/Mapper.cpp",
    "../Common/cpp/Tools/RuntimeDecorator.cpp",
    "../Common/cpp/Tools/Scheduler.cpp",
    "../Common/cpp/Tools/WorkletEventHandler.cpp",
  ]

  deps = [
    "//folly:synchronization",
    "//react-native/ReactCommon/callinvoker",
    "//react-native/ReactCommon/jsi:jsi",
    "//react-native/ReactCommon/react/nativemodule/core",
    "//react-native/ReactCommon/react/renderer/graphics",
    "//react-native/ReactCommon/runtimeexecutor",
    "//react-native/ReactCommon/yoga",
    "//rns_shell",
    "//skia",
  ]

  # Common cpp dependencies
  deps += [
    "//react-native/ReactCommon/callinvoker",
    "//react-native/ReactCommon/jsi:jsi",
    "//react-native/ReactCommon/react/nativemodule/core",
  ]

  with_exceptions = true
  with_rtti = true
  public_configs = [ ":ReanimatedModule_config" ]
}
